# fastapi-pet-social-network

./: .gitignore  Dockerfile  README.md  docker-compose.yml  localhost+2-key.pem  localhost+2.pem  pyproject.toml  requirements.txt  use-case.puml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 15554360826f_update_task.py  2025_03_15_1138-ac9a03129c87_initial_migration.py  2025_03_15_1456-ee7591bcf10d_add_posts.py  2025_03_15_1505-c2cacbbdb6d5_add_posts.py  2025_03_15_1703-e74bbb0f7d83_community.py  2025_03_16_1335-1f1fc1bdf7dc_comment.py  2025_03_16_1402-dc8d75cf12d2_comment.py  2025_03_17_1332-f6bedc5bee9b_profile.py  2025_03_17_1338-8eee28c635de_profile.py  2025_03_17_1521-41b8c282a92f_update_user.py  2025_03_17_1607-596568586ee3_update_user.py  2025_03_18_1326-16f8d67ac25b_update_user.py  2025_03_18_1333-ef06cee910a0_update_user.py  2025_03_18_1409-60cd04febf79_update_post_community_id.py  2025_03_18_1442-7ea4a68ccdc4_update_post_community_id.py  2025_03_18_1539-e03aa323d44c_update_post_community_id.py  2025_03_19_1359-04a754afc5fe_update_user.py  2025_03_21_1514-dc9035327a35_add_achievement.py  2025_03_21_1602-e7d6b52d270d_add_message.py  2025_03_21_1718-03151afcce40_update_message.py  2025_03_21_1727-3a6fc4408c80_update_message.py  2025_03_22_1143-28ff4d1ae7d7_update_post.py  2025_03_22_1146-00461f564a3e_update_post.py  2025_03_24_1140-0b4e227f2520_add_workout.py  2025_04_04_1526-43af3fb0e70c_gym.py  (+47 more)
src/: config.py  database.py  exceptions.py  main.py  models.py  services.py
tests/: conftest.py  test_auth.py  test_post_app.py  test_users.py
(+152 files in other folders)
